# GraphResearh_ForCheckingCriterionOfGoodnessOfFit

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: NORM_EXP-EDGE_NUMBER.txt  NORM_EXP-NODE_DEGREES.txt  NORM_LEVY-EDGE_NUMBERS.txt  NORM_MAXW-EDGE_NUMBERS.txt  NORM_MAXW-NODE_DEGREES.txt  NORM_UNI-EDGE_NUMBER.txt  NORM_UNI-NODE_DEGREE.txt  analyze.py  gen.py  get_graph_statistics.py
src/analyze/: analyze.py  get_graph_statistics.py
src/dataset/: norm_graph0.html  norm_graph1.html  norm_graph10.html  norm_graph11.html  norm_graph12.html  norm_graph13.html  norm_graph14.html  norm_graph15.html  norm_graph16.html  norm_graph17.html  norm_graph18.html  norm_graph19.html  norm_graph2.html  norm_graph3.html  norm_graph4.html  norm_graph5.html  norm_graph6.html  norm_graph7.html  norm_graph8.html  norm_graph9.html  uniform_graph0.html  uniform_graph1.html  uniform_graph10.html  uniform_graph11.html  uniform_graph12.html  uniform_graph13.html  uniform_graph14.html  uniform_graph15.html  uniform_graph16.html  uniform_graph17.html  uniform_graph18.html  uniform_graph19.html  uniform_graph2.html  uniform_graph3.html  uniform_graph4.html  uniform_graph5.html  uniform_graph6.html  uniform_graph7.html  uniform_graph8.html  uniform_graph9.html
src/draw/: draw.py
src/generation/: gen.py
src/graph_analyzer/: analyze.py  get_graph_statistics.py
src/graph_analyzing/: analyze.py  get_graph_statistics.py
src/graph_experimenteter/: my_funcs.py  test.py
src/graph_generation/: gen.py  graph_gen.py
src/graph_generator/: sample_gen.py
src/my_scripts/: heh.py  (+2 more)
(+74 files in other folders)
