[tool.poetry]
name = "graph_researh"
version = "0.1.0"
description = ""
authors = ["Ivan Pokhabov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.3"
numpy = "^2.1.1"
PyQt5 = "^5.15.11"
pyvis = "^0.3.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
typer = "^0.14.0"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.5.2"
pre-commit = "^3.7.1"
pyyaml = "^6.0.1"
matplotlib = "^3.9.1"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
